<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TranslationPractice">

    <ImageView
        android:id="@+id/beeImageTranslation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-60dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/bee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/honey_bee_flower" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:background="@drawable/information_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/statisticsTranslation"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/statisticsPage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_auto_graph_24" />

        <TextView
            android:id="@+id/practiceTranslationTitle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/translate"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/languageSwitch"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/switchLanguage"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/pronounAndVerbTranslation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/practiceTranslationTitle" />

        <TextView
            android:id="@+id/pronounAndVerbTranslation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/translationPlaceholder"
            android:textColor="@color/text_gray"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/answerEditTextTranslation"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/answer"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/text_gray"
            android:textColorHint="@color/light_gray"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pronounAndVerbTranslation"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkAnswerTranslation"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/dark_orange"
            android:gravity="center"
            android:text="@string/checkAnswer"
            android:textAllCaps="false"
            android:textColor="@color/icy_white"
            android:textSize="24sp"
            app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
            app:iconTint="@color/icy_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answerEditTextTranslation"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/statusTranslation"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/status"
            android:textColor="#FF0000"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkAnswerTranslation" />

        <ImageView
            android:id="@+id/honeyCombTranslation"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_nicubunu_honey"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/timerImageTranslation"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/timerIcon"
                app:srcCompat="@drawable/ic_baseline_timer_24" />

            <TextView
                android:id="@+id/timerCountTranslation"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/timePlaceholder"
                android:textColor="@color/text_gray"
                android:textSize="34sp" />

            <ImageView
                android:id="@+id/percentageTranslation"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/percentageImg"
                app:srcCompat="@drawable/ic_baseline_percent_24" />

            <TextView
                android:id="@+id/percentageCountTranslation"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/percentagePlaceholder"
                android:textColor="@color/text_gray"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/fractionCountTranslation"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fractionPlaceholder"
                android:textColor="@color/text_gray"
                android:textSize="34sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>