<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/activityValue"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/activity"
                    android:textColor="@color/text_gray"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/scoreValue"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/score"
                    android:textColor="@color/dark_orange"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dateValue"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:paddingTop="10dp"
                    android:text="@string/date"
                    android:textColor="@color/text_gray"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>